data/derived/fa15/progs/unify/prog2375.ml.out
Characters 184-190:
  helper (seen', rest')
  ^^^^^^
Error: This expression has type ('a -> 'b -> 'c) * 'd list -> 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       ('a -> 'b -> 'c) * 'd list -> 'a -> 'b -> 'c
